popup alignment issues fixed

--- a/style.css
+++ b/style.css
@@ -164,8 +164,7 @@ form {
     width: 550px;
     height: 500px;
     background: #FFFFFF;
-    left:0;
-    right:0;
+   
 }
 
 .inputIteam {
